# BeastArena

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lgtm.yml
.github/: pull_request_template.md
.github/workflows/: main.yml
assets/: highscores.json  names.json
assets/debugger/: level.json  template.json
assets/levels/: box.json  bunny.json  cave.json  city.json  final_destination.json  lava.json  level2.json  pirate.json  street.json  taiga.json  volcano.json  windows_95.json
include/: CMakeLists.txt  class.hpp  player_input.hpp
include/components/: character_selection_component.hpp  damage_component.hpp  despawn_component.hpp  health_component.hpp  hold_component.hpp  hud_component.hpp  name_selection_component.hpp  pickup_component.hpp  ready_component.hpp  spawn_component.hpp  stats_component.hpp  wandering_component.hpp  weapon_component.hpp
include/controllers/: game_controller.hpp
include/data/: score.hpp
include/entities/: character_specs.hpp  entity_factory.hpp  layers.hpp
include/enums/: character.hpp  gadget_type.hpp  game_state.hpp
include/jsons/: score_json.hpp
include/level/: critter_spawn.hpp  level.hpp  player_spawn.hpp
include/menu/: button.hpp  main_menu.hpp  menu.hpp
include/scenes/: beast_scene.hpp  credits_scene.hpp  debug_scene.hpp  end_scene.hpp  error_scene.hpp  help_scene.hpp  highscore_scene.hpp  intermission_scene.hpp  level_scene.hpp  lobby.hpp  main_menu.hpp  menu.hpp  pause_scene.hpp  scene.hpp  scene_manager.hpp
include/scenes/data/level/: gadget_spawn.hpp  player_spawn.hpp  solid.hpp
include/scenes/data/menu/: button.hpp  image.hpp  text.hpp
include/scenes/exceptions/: not_enough_player_spawns_exception.hpp  size_mismatch_exception.hpp
include/systems/: beast_system.hpp  cheat_system.hpp  click_system.hpp  critter_system.hpp  damage_system.hpp  debug_system.hpp  despawn_system.hpp  game_speed_system.hpp  game_system.hpp  highscore_system.hpp  hud_system.hpp  lobby_system.hpp  movement_system.hpp  pause_system.hpp  pickup_system.hpp  ready_up_system.hpp  spawn_system.hpp  ui_system.hpp  weapon_system.hpp
lib/: CMakeLists.txt
lib/components/: character_selection_component.cpp  damage_component.cpp  despawn_component.cpp  health_component.cpp  hold_component.cpp  hud_component.cpp  name_selection_component.cpp  pickup_component.cpp  ready_component.cpp  spawn_component.cpp  stats_component.cpp  wandering_component.cpp  weapon_component.cpp
lib/controllers/: game_controller.cpp
lib/entities/: entity_factory.cpp
lib/jsons/: score_json.cpp
lib/level/: level.cpp
lib/menu/: main_menu.cpp
lib/scenes/: credits_scene.cpp  debug_scene.cpp  end_scene.cpp  error_scene.cpp  help_scene.cpp  highscore_scene.cpp  intermission_scene.cpp  level_scene.cpp  lobby.cpp  main_menu.cpp  pause_scene.cpp  scene.cpp  scene_manager.cpp
lib/systems/: beast_system.cpp  cheat_system.cpp  click_system.cpp  critter_system.cpp  damage_system.cpp  debug_system.cpp  despawn_system.cpp  game_speed_system.cpp  game_system.cpp  highscore_system.cpp  hud_system.cpp  lobby_system.cpp  movement_system.cpp  pause_system.cpp  pickup_system.cpp  ready_up_system.cpp  spawn_system.cpp  ui_system.cpp  weapon_system.cpp
src/: CMakeLists.txt  main.cpp
src/controllers/: game_controller.cpp
src/entities/: entity_factory.cpp
src/systems/: beast_system.cpp  movement_system.cpp
tests/: CMakeLists.txt  int_equals_int.cpp  main_test.cpp
